# AndroidNDKDemo

./: README.md  settings.gradle
AndFixDemo/: build.gradle
AndFixDemo/src/main/: AndroidManifest.xml
AndFixDemo/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndFixDemo/src/main/res/layout/: activity_main.xml
FFPlayerDemo/: build.gradle
FFPlayerDemo/src/main/: AndroidManifest.xml
FFPlayerDemo/src/main/cpp/: CMakeLists.txt  ffplayerdemo.cpp
FFPlayerDemo/src/main/res/layout/: activity_main.xml
GIFDemo/: build.gradle
GIFDemo/src/main/: AndroidManifest.xml
GIFDemo/src/main/cpp/: CMakeLists.txt  native-lib.cpp
GIFDemo/src/main/res/layout/: activity_main.xml
OpenCVDemo/: build.gradle
OpenCVDemo/src/main/: AndroidManifest.xml
OpenCVDemo/src/main/cpp/: CMakeLists.txt  CascadeDetectorAdapter.h  native-lib.cpp
OpenCVDemo/src/main/res/layout/: activity_open_cv.xml
OpenGLDemo/: build.gradle
OpenGLDemo/src/main/: AndroidManifest.xml
OpenGLDemo/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
OpenGLDemo/src/main/cpp/FaceAlignment/: CMakeLists.txt
OpenGLDemo/src/main/cpp/include/: CascadeDetectorAdapter.h
OpenGLDemo/src/main/res/drawable/: record_speed_background.xml
OpenGLDemo/src/main/res/layout/: activity_main.xml  activity_open_gl.xml  activity_soul.xml
OpenGLDemo/src/main/res/raw/: base_frag.frag  base_vertex.vert  beauty_frag.frag  beauty_frag1.frag  bigeye_frag.frag  camera_frag.frag  camera_vertex.vert  soul_vertex.vert
RTMPDemo/: build.gradle
RTMPDemo/src/main/: AndroidManifest.xml
RTMPDemo/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  macro.h  rtmpdemo.cpp
RTMPDemo/src/main/cpp/librtmp/: CMakeLists.txt
RTMPDemo/src/main/res/layout/: activity_hardware_push.xml  activity_soft_push.xml
RTMPDemo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+47 files in other folders)
